Java 8 and other improvements